examples/test/testpolicy7973.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7973
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key49: value46
      key29: value7
      key35: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value20
          key27: value34
      podSelector:
        matchLabels:
          key20: value24
          key42: value21
          key45: value7
